--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,72 +1,297 @@
 body {
-  margin: 0;
-  background:  url("http://www.solofondos.com/wp-content/uploads/2015/11/Im%C3%A1genes-de-fondo-para-sitio-web.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
-}
+    margin: 0;
+    background-color: black;  
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+  }
+  
+  .masthead {
+    margin-bottom: 50px;
+    background-color: #1abc9c;
+    background-size: cover;
+  }
+  
+  .container {
 
-.masthead {
-  margin-bottom: 50px;
-}
+    width: 100%;
+    padding-right: 150px;
+    padding-left: 150px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
 
-.text-center {
-  text-align: center !important;
-}
+  .text-center {
+    text-align: center !important;
+  }
+  
+  .aws span {
+    top: 10px;
+    font-size: 50pt;
+    font-weight: bold;
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+  }
+  .container-fluid {
+    padding-top: 5px ;
+    padding-bottom: 5px;
+    font-size: 30pt;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 
-.aws span {
-  top: 10px;
-  font-size: 50pt;
-  font-weight: bold;
-  position: relative;
-  font-family: "Varela Round";
-  cursor: pointer;
-  transition: all 300ms ease-in-out;
 }
+  .aws span:hover {
+    filter: contrast(250%);
+  }
+  .aws span {
+      color:white;
+  }
+  /*.aws span:nth-child(1) {
+    color: #6B837E;
+  }
+  .aws span:nth-child(2) {
+    color: #6B8374;
+  }
+  .aws span:nth-child(3) {
+    color: #7B836B;
+  }
+  .aws span:nth-child(4) {
+    color: #837F6B;
+  }
+  .aws span:nth-child(5) {
+    color: #83706B;
+  }*/
+  
+  table{
+      width: 50%;
+  }
+  table, th, td{
+      border: 1px solid black;
+      font-family: Arial, Helvetica, sans-serif;
+  }
+  th, td{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-align: center;
+  }
+  img{
+    width: 250px;
+    height: 250px;
+  }
+  button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:white;
+    font-weight: bold;
+    border-radius: 10px;
+  margin-left: 680px;
+  margin-top: 50px ;
+  margin-bottom: 50px ;
+  font-size: 20px;
+  padding:  16px 32px;
+  background: #1abc9c;
+  text-decoration: none;
+  }
 
-.aws span:hover {
-  filter: contrast(250%);
-}
-.aws span:nth-child(1) {
-  color: #6B837E;
-}
-.aws span:nth-child(2) {
-  color: #6B8374;
-}
-.aws span:nth-child(3) {
-  color: #7B836B;
-}
-.aws span:nth-child(4) {
-  color: #837F6B;
-}
-.aws span:nth-child(5) {
-  color: #83706B;
-}
 
-table{
-    width: 50%;
+  .text-justify{
+    font-size: 10pt;
 }
-table, th, td{
-    border: 1px solid black;
+.site-footer
+{
+  background-color:#26272b;
+  padding:45px 0 20px;
+  font-size:15px;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height:24px;
+  color:#737373;
 }
-th, td{
-  color: white;
-  text-align: center;
+.site-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
 }
-img{
-  width: 250px;
-  height: 250px;
+.site-footer hr.small
+{
+  margin:20px 0
 }
-button{
-  padding: 10px 40px;
-  font-size: 16px;
-  color: white;
-  position: relative;
-  left:84%;
-  top:200%;
-  background-color:#423F3F;
-  border-radius: 40px;
+.site-footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
 }
+.site-footer a
+{
+  color:#737373;
+}
+.site-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.site-footer .social-icons
+{
+  text-align:right
+}
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#33353d
+}
+.copyright-text
+{
+  margin:0
+}
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
+  }
+}
+.col-md-4{
+    position: relative;
+    width: 100%;
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+  
+  
+  @media (min-width: 768px) {
+    .col-md-4 { /*Agrupacion de 4 en las imagenes*/
+      flex: 0 0 25%;
+      max-width: 25%;
+    }
+  }
+  
+  .col-md-5{
+      position: relative;
+      width: 100%;
+      padding-right: 30rem;
+      padding-left: 15rem;
+    }
+      
+  @media (min-width: 768px) {
+    .col-md-5 { /*Agrupacion de 4 en las imagenes*/
+      flex: 0 50% 0 ;
+      max-width: 50%;
+    }
+  }
 
-
+@media (max-width:767px)
+{
+  .site-footer
+  {
+    padding-bottom:0
+  }
+  .site-footer .copyright-text,.site-footer .social-icons
+  {
+    text-align:center
+  }
+}
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+.social-icons a.facebook:hover
+{
+  background-color:#3b5998
+}
+.social-icons a.twitter:hover
+{
+  background-color:#00aced
+}
+.social-icons a.linkedin:hover
+{
+  background-color:#007bb6
+}
+.social-icons a.dribbble:hover
+{
+  background-color:#ea4c89
+}
+@media (max-width:767px)
+{
+  .social-icons li.title
+  {
+    display:block;
+    margin-right:0;
+    font-weight:600
+  }
+}
